fix: zamow points

--- a/src/components/organisms/zamow/zamow-hero/questions/questions.css
+++ b/src/components/organisms/zamow/zamow-hero/questions/questions.css
@@ -39,7 +39,7 @@ textarea::-webkit-scrollbar {
   outline: none;
 }
 .zh_question textarea::placeholder {
-  color: #d2200066; 
+  color: #d2200066;
   font-style: italic;
 }
 .zh_question input:focus {
@@ -61,17 +61,17 @@ textarea::-webkit-scrollbar {
 .zh_next_btn {
   padding: 10px 20px;
   border-radius: 28px;
-  background-color: #d21e00;
-  box-shadow: 0 0 0 0 #981a05, 0 4px 0 0 #981a05;
-  border: 2px solid #981a05;
   color: white;
   font-weight: 400;
   font-size: 22px;
+  background-color: var(--brand-blue);
+  box-shadow: 0 0 0 0 var(--brand-blue-hover), 0 4px 0 0 var(--brand-blue-hover);
+  border: 2px solid var(--brand-blue);
 }
 .zh_next_btn:hover {
   box-shadow: none;
 }
-.question_container{
+.question_container {
   width: 90%;
   padding-bottom: 60px !important;
 }
@@ -149,7 +149,7 @@ p.range_description {
   background-color: white;
 }
 
-input[type="range"] {
+input[type='range'] {
   /* removing default appearance */
   -webkit-appearance: none;
   appearance: none;
@@ -166,7 +166,7 @@ input[type="range"] {
 }
 
 /* Thumb: webkit */
-input[type="range"]::-webkit-slider-thumb {
+input[type='range']::-webkit-slider-thumb {
   /* removing default appearance */
   -webkit-appearance: none;
   appearance: none;
@@ -183,7 +183,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 /* Thumb: Firefox */
-input[type="range"]::-moz-range-thumb {
+input[type='range']::-moz-range-thumb {
   height: 35px;
   width: 35px;
   background-color: #f50;
@@ -197,25 +197,25 @@ input[type="range"]::-moz-range-thumb {
 
 /* Hover, active & focus Thumb: Webkit */
 
-input[type="range"]::-webkit-slider-thumb:hover {
+input[type='range']::-webkit-slider-thumb:hover {
   box-shadow: 0 0 0 10px rgba(255, 85, 0, 0.1);
 }
-input[type="range"]:active::-webkit-slider-thumb {
+input[type='range']:active::-webkit-slider-thumb {
   box-shadow: 0 0 0 13px rgba(255, 85, 0, 0.2);
 }
-input[type="range"]:focus::-webkit-slider-thumb {
+input[type='range']:focus::-webkit-slider-thumb {
   box-shadow: 0 0 0 13px rgba(255, 85, 0, 0.2);
 }
 
 /* Hover, active & focus Thumb: Firfox */
 
-input[type="range"]::-moz-range-thumb:hover {
+input[type='range']::-moz-range-thumb:hover {
   box-shadow: 0 0 0 10px rgba(255, 85, 0, 0.1);
 }
-input[type="range"]:active::-moz-range-thumb {
+input[type='range']:active::-moz-range-thumb {
   box-shadow: 0 0 0 13px rgba(255, 85, 0, 0.2);
 }
-input[type="range"]:focus::-moz-range-thumb {
+input[type='range']:focus::-moz-range-thumb {
   box-shadow: 0 0 0 13px rgba(255, 85, 0, 0.2);
 }
 input.income_range::-webkit-slider-runnable-track {
@@ -225,8 +225,8 @@ input.income_range::-webkit-slider-runnable-track {
   border-radius: 5px;
   border-radius: 50px;
 }
-input[type="range"]::-webkit-slider-thumb::before {
-  content: "";
+input[type='range']::-webkit-slider-thumb::before {
+  content: '';
   position: absolute;
   height: 100%;
   width: calc((100% - 20px) * 50%);
@@ -314,7 +314,7 @@ input[type="range"]::-webkit-slider-thumb::before {
   border-radius: 31px;
 }
 .checkbox.style-d .checkbox__checkmark:after {
-  content: "";
+  content: '';
   position: absolute;
   left: 10px;
   top: 5px;
@@ -410,8 +410,8 @@ button.zh_preview_btn {
   padding: 10px 20px;
   border-radius: 50px;
   font-size: 20px;
-  color: #d21e00;
-  border: 2px solid #d21e00;
+  color: var(--brand-blue);
+  border: 2px solid var(--brand-blue);
   background: transparent;
   font-weight: 500;
 }
@@ -423,97 +423,98 @@ button.zh_preview_btn {
 @media only screen and (max-width: 1024px) {
   .checkBOxContainer {
     width: 100%;
-}
-.zh_marketing_container {
-  padding: 0px 0;
-}
-.zh_question{
-  padding: 0px 0;
-}
-.tri_arrow {
-  left: -10px;
-  bottom: -10px;
-}
-.accordion-heading {
-  font-size: 50px !important;
-}
-.question h4 {
-  font-size: 30px !important;
-}
-.question header{
-  padding: 0 !important;
-}
-.zh_question, .working_container textarea{
-  width: 90%;
-}
-.question_14 {
-  padding: 70px 0 0;
-}
-.zamow-hero .marketing_book {
-  width: 90%;
-  margin: 0 auto 0;
-}
-.marketing_book h3{
-  font-size: 30px;
-}
-
+  }
+  .zh_marketing_container {
+    padding: 0px 0;
+  }
+  .zh_question {
+    padding: 0px 0;
+  }
+  .tri_arrow {
+    left: -10px;
+    bottom: -10px;
+  }
+  .accordion-heading {
+    font-size: 50px !important;
+  }
+  .question h4 {
+    font-size: 30px !important;
+  }
+  .question header {
+    padding: 0 !important;
+  }
+  .zh_question,
+  .working_container textarea {
+    width: 90%;
+  }
+  .question_14 {
+    padding: 70px 0 0;
+  }
+  .zamow-hero .marketing_book {
+    width: 90%;
+    margin: 0 auto 0;
+  }
+  .marketing_book h3 {
+    font-size: 30px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
-  .zamow-hero.col{
+  .zamow-hero.col {
     max-width: 95%;
   }
   .zh_question {
     padding: 0px 0px;
-}
-.zh_question textarea {
-  font-size: 20px;
-  line-height: 43px;
-}
-.zh_next_btn {
-  padding: 5px 20px;
-  font-size: 20px;
-}
-.zh_question h2 {
-  font-size: 30px;
-  margin-bottom: 30px;
-}
-.zh_next_btn_container {
-  align-items: baseline;
-}
-.tri_arrow {
-  display: none;
-}
-input[type="range"]{
-  width: 100%;
-}
-.checkBOxContainer {
-  padding: 0 20px;
-}
-.marketing_book {
-  padding: 0 20px;
-}
-.marketing_book h3 {
-  font-size: 25px;
-  line-height: 40px;
-  text-align: center;
-}
-.question_14 {
-  margin: 0 auto;
-  padding: 0px 0;
-}
-.question_14 h2 {
-  font-size: 50px;
-}
-.results-card{
-  min-height: 200px !important;
-}
-.results-card p{
-  font-size: 18px !important;
-}
-.marketing_book button.zh_preview_btn, .marketing_book .zh_next_btn {
-  font-size: 11px;
-}
+  }
+  .zh_question textarea {
+    font-size: 20px;
+    line-height: 43px;
+  }
+  .zh_next_btn {
+    padding: 5px 20px;
+    font-size: 20px;
+  }
+  .zh_question h2 {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+  .zh_next_btn_container {
+    align-items: baseline;
+  }
+  .tri_arrow {
+    display: none;
+  }
+  input[type='range'] {
+    width: 100%;
+  }
+  .checkBOxContainer {
+    padding: 0 20px;
+  }
+  .marketing_book {
+    padding: 0 20px;
+  }
+  .marketing_book h3 {
+    font-size: 25px;
+    line-height: 40px;
+    text-align: center;
+  }
+  .question_14 {
+    margin: 0 auto;
+    padding: 0px 0;
+  }
+  .question_14 h2 {
+    font-size: 50px;
+  }
+  .results-card {
+    min-height: 200px !important;
+  }
+  .results-card p {
+    font-size: 18px !important;
+  }
+  .marketing_book button.zh_preview_btn,
+  .marketing_book .zh_next_btn {
+    font-size: 11px;
+  }
 }
 
 /* congrats gif */
