--- a/src/components/organisms/zamow/zamow-hero/zamow-hero.css
+++ b/src/components/organisms/zamow/zamow-hero/zamow-hero.css
@@ -136,4 +136,12 @@
   .zh_next_btn_container p {
     display: none;
   }
+
+  .zemow-hero-input::placeholder {
+    font-size: 16px;
+  }
+
+  .zemow-hero-input {
+    font-size: 16;
+  }
 }
