--- a/src/components/organisms/tresci-sprzedazowe/tresci.css
+++ b/src/components/organisms/tresci-sprzedazowe/tresci.css
@@ -477,6 +477,7 @@ contact-inputs textarea {
   width: 100%;
   margin: 0 auto;
   display: block;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .copywriter-custom-header-3 {
   font-family: 'Georgia';
