login points from the sheet

--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -772,6 +772,7 @@ img.projects-main-image-logop {
 }
 .image-810 img {
   width: 100%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .desktop-810 {
   display: inline-block;
@@ -797,10 +798,11 @@ img.projects-main-image-logop {
   max-width: 810px;
   text-align: center;
   margin: 0 auto 50px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .projects-theme-title-2:after {
-  background: linear-gradient(to right, #d8ac23 0%, #ffce36 100%);
+  background: var(--brand-blue);
   width: 350px;
   height: 10px;
   content: '';
@@ -908,7 +910,7 @@ img.projects-main-image-logop {
   font-style: italic;
 }
 
-.halfc-bottom {
+/* .halfc-bottom {
   height: 68px;
   width: 100%;
   position: relative;
@@ -917,7 +919,7 @@ img.projects-main-image-logop {
   background-repeat: no-repeat;
   background-position: center top;
   transform: rotate(180deg);
-}
+} */
 
 .names-thematic-section-black-fix {
   padding-top: 1px;
@@ -926,7 +928,7 @@ img.projects-main-image-logop {
 }
 
 .names-thematic-section-black {
-  background-color: #000000;
+  /* background-color: #000000; */
 }
 
 .copywriter-ending-main-theme {
