--- a/src/app/tresci-sprzedazowe/sales.css
+++ b/src/app/tresci-sprzedazowe/sales.css
@@ -269,15 +269,23 @@ section.business_tools {
   margin: 35px 0px;
 }
 
-.copywriter-custom-text-1 {
-  font-size: 44px;
+.copywriter-custom-text-1,
+.copywriter-custom-text-2 {
+  /* font-size: 44px;
   font-family: 'Playfair Display';
-  margin-bottom: 30px;
+  margin-bottom: 30px; */
+
+  font-family: 'Playfair Display', serif;
+  font-size: 32px;
+  line-height: 33px;
+  margin-bottom: 25px;
+  letter-spacing: -0.01em;
+  color: #3e3e3e;
 }
 
 .copywriter-custom-text-2 {
-  font-size: 37px;
-  font-family: 'Playfair Display';
+  /* font-size: 37px;
+  font-family: 'Playfair Display'; */
 }
 
 /* business tool images */
@@ -298,7 +306,7 @@ section.business_tools {
   line-height: 1.3;
   font-family: 'Playfair Display', Serif;
   font-weight: 900;
-  margin: 60px 0;
+  /* margin: 60px 0; */
 }
 
 .copywriter-standard-mb-40 {
